--- a/styles/main.css
+++ b/styles/main.css
@@ -319,13 +319,14 @@ footer a{
 }
 
 .card{
-    background-color: #000000;
+    /* background-color: #000000; */
     aspect-ratio: 360/400;
     border-radius: 10px;
     display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 1fr;
     overflow:hidden;
+    border: solid 2px var(--color-accent1);
 }
 
 .inner_card1{
@@ -342,6 +343,7 @@ footer a{
 }
 
 .inner_card2{
+    background-color: var(--color-accent2);
     grid-column: 1;
     grid-row: 2;
     display: grid;
@@ -354,7 +356,7 @@ footer a{
     grid-column: span 2;
     grid-row: 1;
     justify-self: center;
-    color: white;
+    color: var(--color-bright);
     padding-top: 10px;
 }
 
@@ -362,14 +364,25 @@ footer a{
     grid-column: span 2;
     grid-row: 2;
     justify-self: center;
-    color: white;
+    color: var(--color-bright);
 }
 
 .card_price{
     grid-column: 1;
     grid-row: 3;
     justify-self: center;
-    color: white;
+    color: var(--color-bright);
+}
+
+.card_buy{
+    justify-self: center;
+    grid-column: 2;
+    grid-row: 3;
+    color: var(--color-bright);
+}
+
+.card_buy:hover{
+    color: var(--color-accent1);
 }
 
 /* /КАТАЛОГ */
