--- a/styles/main.css
+++ b/styles/main.css
@@ -390,7 +390,8 @@ footer a{
 /* PRODUCT_PAGE */
 .product{
     display: grid;
-    grid-template-rows: repeat(2, 1fr);
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 50px;
 }
 
 /* SLIDER */
@@ -400,6 +401,10 @@ footer a{
     /* margin: 0 20px; */
     /* max-width: 800px; */
     grid-row: 1;
+    aspect-ratio: 1/1;
+    align-self: center;
+    margin-left: 20px;
+    border-radius: 10px;
 }
 
 .slider-line{
@@ -411,7 +416,7 @@ footer a{
 
 .slider-btn-prev{
     position: absolute;
-    left: 2%;
+    left: 3%;
     top: 50%;
     transform: rotate(-90deg) translateY(-50%);
     background-color: transparent;
@@ -420,7 +425,7 @@ footer a{
 
 .slider-btn-next{
     position: absolute;
-    right: 2%;
+    right: 3%;
     top: 50%;
     transform: rotate(90deg) translateY(-50%);
     background-color: transparent;
@@ -479,6 +484,39 @@ footer a{
 /* SLIDER */
 
 .product_info{
+    grid-column: 2;
+    display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: auto repeat(4, 1fr);
+}
+
+.product_name{
+    font-size: 2.1rem;
+    grid-row: 1;
+    grid-column: span 2;
+    justify-self: left;
+}
+
+.id{
+    grid-column: 1;
     grid-row: 2;
 }
+
+.count{
+    grid-column: 2;
+    grid-row: 2;
+}
+
+.product_description{
+    grid-column: span 2;
+    grid-row: 3;
+}
+
+.price{
+    grid-column: span 2;
+    grid-row: 4;
+    font-size: 2rem;
+}
+
+
 /* /PRODUCT_PAGE */
