--- a/styles/main.css
+++ b/styles/main.css
@@ -357,16 +357,16 @@ footer a{
     padding-top: 10px;
 }
 
-.card_dcp{
+/* .card_dcp{
     grid-column: span 2;
     grid-row: 2;
     justify-self: center;
     color: var(--color-bright);
-}
+} */
 
 .card_price{
-    grid-column: 1;
-    grid-row: 3;
+    grid-column: span 2;
+    grid-row: 2;
     justify-self: center;
     color: var(--color-bright);
 }
