--- a/styles/main.css
+++ b/styles/main.css
@@ -195,28 +195,57 @@ footer a{
 
 .ads{
     display: grid;
-    grid-template-columns: 800px minmax(200px, 1fr) minmax(200px, 1fr) minmax(200px, 1fr);
-	grid-template-rows: 1fr 1fr;
+    grid-template-columns: repeat(6, minmax(220px, 1fr));
+	grid-template-rows: repeat(2, 1fr);
 	grid-gap: 20px;
     margin-bottom: 70px;
 }
-/* ИГРА */
-.game{
-    background-color: green;
+
+.ad{
+    grid-column: span 3;
     grid-row: span 2;
     aspect-ratio: 4 / 3;
 }
 
-.game h1{
-    color: white;
-    font-size: 100px;
-    text-align: center;
-    margin-top: 230px;
+.ad img{
+    height: 100%;
+    border-radius: 20px;
 }
-/* /ИГРА */
 
-.trends{
-    background-color: black;
+.trend{
+    aspect-ratio: 220/252.5;
+    border-radius: 10px;
+    display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr;
+    overflow:hidden;
+    border: solid 2px var(--color-accent1);
+}
+
+.inner_trend1{
+    grid-column: 1;
+    grid-column: 1;
+    justify-self: center;
+    overflow:hidden;
+    background-color: var(--color-bright);
+}
+
+.inner_trend1 > img{
+    display: block;
+    object-fit: cover;
+    width: 70%;
+    margin: 0 auto;
+    margin-top: -15%;
+}
+
+.inner_trend2{
+    background-color: var(--color-accent2);
+    grid-column: 1;
+    grid-row: 2;
+    display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: 1fr auto auto;
+        row-gap: 20px;
 }
 /* /AD */
 
@@ -225,22 +254,29 @@ footer a{
     margin-bottom: 70px;
 }
 
-.new span, .male_prew span, .female_prew span, .kid_prew span{
-    font-size: 2rem;
-}
-
 .prew_con{
-    min-width: 1460px;
     margin-top: 20px;
     display: grid;
-        grid-template-columns: repeat(6, minmax(200px, 1fr));
-        grid-template-rows: minmax(300px, 1fr);
+        grid-template-columns: repeat(5, minmax(268px, 1fr));
+        grid-template-rows: 1fr;
         grid-gap: 20px;
 }
 
-.prew{
-    background-color: black;
-    aspect-ratio: 2/2.5;
+.link_btn{
+    display: flex;
+    grid-row: span 2;
+    background-color: var(--color-accent2);
+    color: var(--color-bright);
+}
+
+.link_btn:hover{
+    background-color: var(--color-accent1);
+    color: var(--color-dark);
+}
+
+.link_btn > div{
+    align-self: center;
+    margin: 0 auto;
 }
 /* /NEW */
 /* /ТЕЛО */
@@ -387,6 +423,7 @@ footer a{
 
 .card_buy:hover{
     color: var(--color-accent1);
+    text-decoration: underline;
 }
 /* /КАТАЛОГ */
 
