--- a/styles/main.css
+++ b/styles/main.css
@@ -625,7 +625,7 @@ input{
     text-align: center;
     border: 2px solid var(--color-dark);
     background-color: var(--color-accent2);
-    color: var(--color-bright);
+    color: #d39393;
     border-radius: 15px;
     font-size: 1.2rem;
     margin-bottom: 40px;
