--- a/styles/main.css
+++ b/styles/main.css
@@ -267,11 +267,13 @@ footer a{
     grid-row: span 2;
     background-color: var(--color-accent2);
     color: var(--color-bright);
+    border-radius: 10px;
 }
 
 .link_btn:hover{
     background-color: var(--color-accent1);
     color: var(--color-dark);
+    border: 2px solid var(--color-accent2);
 }
 
 .link_btn > div{
